# chafa-rust

./: .gitignore  .gitmodules  Cargo.toml  INTERNALS  Makefile  README.md
.github/workflows/: rust.yml  static.yml
chafa-sys/: Cargo.toml  build.rs
docs/: readme_template.md
examples/: demo.rs  image2ansi.rs
src/: extra.rs  lib.rs
